--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -129,6 +129,7 @@ body {
 }
 
 .nodeta {
+  padding: 12px;
   text-align: center;
   color: #505050;
   font-size: 12px;
@@ -3516,3 +3517,17 @@ body {
     }
   }
 }
+
+// .infinite-scroll-component__outerdiv .infinite-scroll-component  {
+//   height: calc(100dvh - 85px) !important;
+//   overflow-y: auto !important;
+//   scrollbar-width: none;
+//   &::-webkit-scrollbar {
+//     width: 0;
+//   }
+//   .moneyboy-posts-scroll-container {
+//     scrollbar-width: none;
+//   }
+// }
+.infinite-scroll-component {scrollbar-width: none;}
+.infinite-scroll-component::-webkit-scrollbar {display: none;}
