Explaining What MoneyBoy is, How it Works, Creator Features, and FAQs. Pages Design

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -2086,6 +2086,79 @@ body {
         }
       }
     }
+    .accordion {
+      gap: 2px;
+      display: flex;
+      flex-direction: column;
+      transition: var(--transition-fast);
+      .accordion_head {
+        user-select: none;
+        -webkit-user-select: none;
+        cursor: pointer;
+        width: 100%;
+        gap: 10px;
+        padding: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: #fff;
+        border: 1.5px solid #EBEBEB;
+        box-shadow: 0px 0px 0px 3px #FFFFFF inset;
+        border-radius: 18px;
+        .head_cont {
+          gap: 3px;
+          display: flex;
+          flex-direction: column;
+          span {
+            color: #878787;
+            font-weight: 500;
+            font-size: 11px;
+            line-height: 100%;
+            .star {
+              color: #D03F3F;
+            }
+          }
+          h5 {
+            color: #505050eb;
+            font-weight: 700;
+            font-size: 15px;
+            line-height: 100%;
+          }
+        }
+      }
+      .accordion_body {
+        display: none;
+        padding: 8px 12px;
+        background-color: #fff;
+        border: 1.5px solid #EBEBEB;
+        box-shadow: 0px 0px 0px 3px #FFFFFF inset;
+        border-radius: 18px;
+        color: rgb(68, 68, 68);
+        font-size: 14px;
+        line-height: 18px;
+        font-weight: 500;
+        b {
+          font-weight: 700;
+        }
+        p {
+          font-size: 15px;
+          margin-bottom: 7px;
+          &:last-child {
+            margin-bottom: 0px;
+          }
+        }
+      } 
+      &.show {
+        .accordion_head {
+          .icons {
+            transform: rotate(-180deg);
+          }
+        }
+        .accordion_body {
+          display: block;
+        }
+      } 
+    }
   }
   /* ========== Tablet (768px – 1024px) ========== */
   @media (min-width: 768px) and (max-width: 1024px) {
@@ -2130,6 +2203,35 @@ body {
           padding-inline-start: 32px;
           &::before {
             left: 10px;
+          }
+        }
+      }
+      .accordion {
+        .accordion_head {
+          gap: 8px;
+          padding: 8px;
+          border-radius: 14px;
+          .head_cont {
+            gap: 3px;
+            display: flex;
+            flex-direction: column;
+            h5 {
+              font-size: 13px;
+              line-height: 18px;
+            }
+          }
+          svg.icons {
+            width: 18px;
+            height: 18px;
+          }
+        }
+        .accordion_body {
+          padding: 8px;
+          font-size: 12px;
+          line-height: 16px;
+          p {
+            font-size: 12px;
+            margin-bottom: 5px;
           }
         }
       }
