--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -135,9 +135,65 @@ body {
   font-size: 12px;
 }
 
-.radio_wrap {color: #444444;display: inline-flex; align-items: center; gap: 6px; cursor: pointer; user-select: none; font-size: 14px;}
-.radio_wrap input[type="radio"] {appearance: none; border: 1.5px solid #f59e0b; border-radius: 50%; width: 20px; height: 20px; position: relative; min-height: 20px; padding: 0px;}
-.radio_wrap input[type="radio"]:checked {background: linear-gradient(103.7deg, #FECE26 4.76%, #E5741F 118.16%);border: transparent;}
+.radio_wrap {
+  color: #444;
+  display: inline-flex;
+  align-items: center;
+  gap: 6px;
+  cursor: pointer;
+  user-select: none;
+  font-size: 14px;
+  transition: all 0.3s ease;
+  input[type="radio"] {
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    min-height: 20px;
+    padding: 0;
+    border: 1.5px solid #f59e0b;
+    border-radius: 50%;
+    position: relative;
+    cursor: pointer;
+    &:checked {
+      border: none;
+      background: linear-gradient(103.7deg, #fece26 4.76%, #e5741f 118.16%);
+      // optional inner dot
+      &::after {
+        content: "";
+        width: 8px;
+        height: 8px;
+        background: transparent;
+        border-radius: 50%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+  }
+  &.box_select {
+    background: #fff;
+    border: 1.5px solid #0000004D;
+    border-radius: 12px;
+    padding: 16px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    input[type="radio"] {
+      display: none;
+    }
+    &:hover {
+      background: #fff7e6;
+    }
+    &:has(input[type="radio"]:checked) {
+      color: #FFF;
+      border-color: transparent;
+      background: linear-gradient(103.7deg, #fece26 4.76%, #e5741f 118.16%);
+      * {
+        color: inherit;
+      }
+    }
+  }
+}
 
 // Toggle Start
 .toggleGroup {
@@ -410,9 +466,6 @@ body {
 .mb-10 {
   margin-bottom: 15px !important;
 }
-.justify-center {
-  justify-content: center;
-}
 .text-right {
   text-align: right;
 }
@@ -421,6 +474,9 @@ body {
 }
 .items-center {
   align-items: center;
+}
+.justify-center {
+  justify-content: center;
 }
 .max-w-50 {
   max-width: 50%;
@@ -1791,6 +1847,416 @@ body {
         }
       }
     }
+    &.tip-modal {
+      padding: 50px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      max-width: 480px;
+      .close-btn {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+      }
+      .title {
+        font-weight: 400;
+        font-size: 42px;
+        text-transform: capitalize;
+        justify-content: center;
+      }
+      .text-center {
+        text-align: center;
+      }
+      label {
+        color: #505050;
+        font-weight: 500;
+        font-size: 15px;
+        line-height: normal;
+        letter-spacing: 0px;
+        margin-bottom: 12px;
+        display: block;
+      }
+      input.number-input {
+        max-width: 60%;
+        padding: 12px;
+        display: block;
+        margin: 0 auto;
+        background-color: #FFF;
+        -moz-appearance: number-input;
+        &::-webkit-inner-spin-button,
+        &::-webkit-outer-spin-button {
+          opacity: 1;
+          -webkit-appearance: auto;
+        }
+      }
+      .actions {
+        justify-content: center;
+        button.premium-btn {
+          max-width: 60%;
+        }
+      }
+      &.unlockmodal {
+        padding: 40px;
+        gap: 15px;
+        max-width: 400px;
+        .profile-card {
+          padding: 10px 0px 10px 0px;
+          .justify-center {
+            justify-content: start;
+          }
+        }
+        .title {
+          font-size: 32px;
+          margin-bottom: 0px;
+          justify-content: start;
+        }
+        h4 {
+          color: var(--color-text-active);
+          font-size: 24px;
+          font-weight: 500;
+          line-height: 100%;
+          font-style: normal;
+          font-family: var(--font-family-heading); 
+          span {
+            color: #E77920;
+          }
+        }
+      }
+    }
+    &.subscription-modal {
+      padding: 40px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      max-width: 550px;
+      .close-btn {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+      }
+      h3.title {
+        gap: 5px;
+        font-size: 26px;
+        margin-bottom: 0px;
+        align-items: baseline;
+        span.gradinttext {
+          background: linear-gradient(105.43deg, #FECE26 -50.93%, #E5741F 117.71%);
+          -webkit-background-clip: text;
+          background-clip: text;
+          -webkit-text-fill-color: transparent;
+        }
+        sub {
+          font-size: 16px;
+          font-weight: 500;
+          font-family: var(--font-family-base);
+          span {
+            color: #505050;
+            font-size: 12px;
+          }
+        }
+      }
+      p {
+        &.note {
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 18px;
+        }
+      }
+      ul {
+        margin: 10px 0;
+      }
+      .profile-card {
+        padding: 0px;
+        .profile-card__main {
+          justify-content: start;
+        }
+      }
+      .actions {
+        gap: 10px;
+        justify-content: center;
+        .custom-select-element {
+          width: 100%;
+          max-width: 60%;
+          background-color: #FFF;
+          border: 1.5px solid #000000;
+          .custom-select-label-wrapper {
+            padding: 12px;
+          }
+        }
+        button.premium-btn {
+          max-width: 35%;
+        }
+      }
+    }
+    &.promote-modal {
+      padding: 40px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      max-width: 550px;
+      .close-btn {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+      }
+      h3.title {
+        justify-content: center;
+        font-size: 36px;
+        margin-bottom: 0px;
+        align-items: baseline;
+      }
+      h5 {
+        font-size: 20px;
+        line-height: 100%;
+        font-weight: 400;
+      }
+      .note {
+        background-color: #F9F9F9;
+        border: 1.5px solid #0000004d;
+        padding: 12px;
+        border-radius: 18px;
+        p {
+          color: #020202;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 100%;
+          text-align: center;
+          text-transform: capitalize;
+          font-family: var(--font-family-heading);
+        }
+      } 
+      .select_wrap {
+        display: inline-flex;
+        gap: 15px;
+        &.grid2 {
+          gap: 20px;
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+        }
+        .radio_wrap {
+          padding: 9px 12px;
+          border-radius: 12px;
+          border: 1.5px solid #F1F1F1;
+          min-width: fit-content;
+          &:last-child {
+            width: -webkit-fill-available;
+          }
+          input[type="radio"] {
+            width: 16px;
+            height: 16px;
+            min-height: 16px;
+          }
+          .icons {
+            width: 18px;
+            height: 18px;
+          }
+          p {
+            color: #444444;
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 100%;
+          }
+          &.box_select {
+            display: block;
+            padding: 12px;
+            border-radius: 20px;
+            border: 1.5px solid #0000004d;
+            box-shadow: 0px 4px 9px 0px #0000000F;
+            h3 {
+              text-align: center;
+              font-weight: 400;
+              font-size: 16px;
+              line-height: 100%;
+              text-transform: capitalize;
+              margin-bottom: 5px;
+            }
+            p {
+              text-align: center;
+              font-weight: 400;
+              font-size: 14px;
+              line-height: 100%;
+              text-transform: capitalize;
+            }
+            &:has(input[type="radio"]:checked) {
+              p {
+                color: #FFF;
+              }
+            }
+          }
+        }
+      }
+      .total_wrap {
+        gap: 5px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 12px 20px;
+        background: #fff;
+        border-radius: 20px;
+        border: 1.5px solid #0000004d;
+        box-shadow: 0 4px 9px #0000000f;
+        h2 {
+          text-align: right;
+          font-size: 24px;
+          line-height: 100%;
+          font-weight: 400;
+          text-transform: capitalize;
+          margin-bottom: 0px;
+        }
+        h3 {
+          text-align: start;
+          font-size: 16px;
+          font-weight: 400;
+          line-height: 100%;
+          text-transform: capitalize;
+          margin-bottom: 5px;
+        }
+        p {
+          color: #878787;
+          text-align: start;
+          font-size: 13px;
+          font-weight: 400;
+          text-transform: capitalize;
+          line-height: 100%;
+          margin-bottom: 0px;
+        }
+      }
+      .actions {
+        button {
+          cursor: pointer;
+          width: 100%;
+          max-width: 47%;
+          padding: 14px 8px;
+        }
+      }
+    }
+    &.request-modal {
+      padding: 40px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      max-width: 550px;
+      .close-btn {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+      }
+      h3.title {
+        justify-content: start;
+        font-size: 28px;
+        margin-bottom: 0px;
+      }
+      .profile-card {
+        padding: 0px;
+        .justify-center {
+          justify-content: start;
+        }
+      }
+      label {
+        color: #000;
+        font-size: 14px;
+        line-height: 18px;
+        margin-bottom: 6px;
+        display: inline-block;
+      }
+      input, textarea {
+        font-size: 14px;
+        padding: 12px;
+        background-color: #FFF;
+        &::placeholder {
+          color: #878787;
+        }
+      }
+      .custom-select-element  {
+        background-color: #FFF;
+        .custom-select-label-wrapper {
+          padding: 12px;
+        }
+      }
+      .upload-wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin: 0px;
+        position: relative;
+        z-index: 0;
+        background: #ffffff;
+        border: 0px;
+        padding: 0px;
+        color: #444444;
+        font-size: 14px;
+        line-height: 100%;
+        font-weight: 500;
+        letter-spacing: 0px;
+        font-family: var(--font-family-base);
+        .img_wrap {
+          background-color: #f4f4f4;
+          border-radius: 15px;
+          width: 60px;
+          height: 60px;
+          min-width: 60px;
+          display: grid;
+          place-items: center;
+          position: relative;
+          left: 0px;
+          margin-right: 0px;
+          .icons {
+            width: 45px;
+            height: 45px;
+          }
+          .imgicons {
+            position: absolute;
+            bottom: 0px;
+            right: 0px;
+            padding: 3px;
+            border-radius: 8px;
+            background-color: #fdfdfd;
+            box-shadow: 0px 6px 4px -4px #08080803,
+              0px 2px 1.5px -4px #0808080a, 0px 4px 4px 0px #00000017;
+          }
+        }
+        .btn-primary {
+          background: linear-gradient(93.25deg, #FECE26 -49.57%, #E5741F 98.1%);
+          max-width: 40%;
+          width: 100%;
+          border-radius: 16px;
+          .imgicons {
+            display: inline-flex;
+            padding: 2px;
+            border-radius: 8px;
+            background-color: #fdfdfd;
+            box-shadow: 0px 6px 4px -4px #08080803, 0px 2px 1.5px -4px #0808080a, 0px 4px 4px 0px #00000017;
+            svg {
+              filter: grayscale(100%) brightness(0%);
+            }
+          }
+          &:hover {
+            background: linear-gradient(93.25deg, var(--color-text-active) -49.57%, var(--color-text-active) 98.1%);
+            .imgicons {
+              background-color: transparent;
+              svg {
+                filter: unset;
+              }
+            }
+          }
+        }
+      }
+      p {
+        font-size: 13px;
+        &.boldblack {
+          color: #444444;
+          font-weight: 600;
+        }
+      }
+      .actions {
+        button {
+          cursor: pointer;
+          width: 100%;
+          max-width: 47%;
+          padding: 14px 8px;
+        }
+      }
+    }
   }
   &.show {
     display: flex;
@@ -1953,6 +2419,178 @@ body {
             width: 100%;
             max-width: 48%;
             padding: 14px 8px;
+          }
+        }
+      }
+      &.tip-modal {
+        padding: 20px;
+        max-width: 90%;
+        .title {
+          width: fit-content;
+          max-width: 90%;
+          order: 1;
+          font-size: 32px;
+          justify-content: start;
+        }
+        .profile-card {
+          order: 2;
+          padding: 8px 0px 8px 0px;
+          .justify-center {
+            justify-content: start !important;
+          }
+        }
+        .text-center {
+          order: 3;
+          text-align: center;
+        }
+        label {
+          text-align: left;
+          margin-bottom: 6px;
+        }
+        input.number-input {
+          max-width: 100%;
+        }
+        .actions {
+          order: 4;
+          justify-content: center;
+          button.premium-btn {
+            max-width: 100%;
+          }
+        }
+      }
+      &.subscription-modal {
+        padding: 20px;
+        max-width: 90%;
+        h3.title {
+          font-size: 20px;
+          sub {
+            font-size: 14px;
+          }
+        }
+        .actions {
+          gap: 10px;
+          justify-content: center;
+          .custom-select-element {
+            max-width: 100%;
+          }
+          button.premium-btn {
+            max-width: 100%;
+          }
+        }
+      }
+      &.promote-modal {
+        padding: 20px;
+        max-width: 90%;
+        h3.title {
+          justify-content: start;
+          font-size: 24px;
+          max-width: 90%;
+        }
+        h5 {
+          font-size: 18px;
+        }
+        .note {
+          padding: 12px;
+          border-radius: 16px;
+          p {
+            font-size: 13px;
+          }
+        } 
+        .select_wrap {
+          gap: 10px;
+          display: inline-grid;
+          &.grid2 {
+            gap: 10px;
+          }
+          .radio_wrap {
+            padding: 7px 12px;
+            input[type="radio"] {
+              width: 18px;
+              height: 18px;
+              min-height: 18px;
+            }
+            .icons {
+              width: 20px;
+              height: 20px;
+            }
+            p {
+              font-size: 13px;
+            }
+            &.box_select {
+              padding: 10px;
+              border-radius: 14px;
+              h3 {
+                font-size: 14px;
+                margin-bottom: 3px;
+              }
+              p {
+                font-size: 12px;
+                text-transform: capitalize;
+              }
+              &:has(input[type="radio"]:checked) {
+                p {
+                  color: #FFF;
+                }
+              }
+            }
+          }
+        }
+        .total_wrap {
+          padding: 10px 18px;
+          border-radius: 14px;
+          h2 {
+            font-size: 22px;
+          }
+        }
+      }
+      &.request-modal {
+        padding: 20px;
+        max-width: 90%;
+        .close-btn {
+          position: absolute;
+          top: 20px;
+          right: 20px;
+        }
+        h3.title {
+          justify-content: start;
+          font-size: 22px;
+          max-width: 93%;
+        }
+        .upload-wrapper {
+          gap: 15px;
+          .img_wrap {
+            background-color: #f4f4f4;
+            border-radius: 15px;
+            width: 60px;
+            height: 60px;
+            min-width: 60px;
+            display: grid;
+            place-items: center;
+            position: relative;
+            left: 0px;
+            margin-right: 0px;
+            .icons {
+              width: 45px;
+              height: 45px;
+            }
+            .imgicons {
+              position: absolute;
+              bottom: 0px;
+              right: 0px;
+              padding: 3px;
+              border-radius: 8px;
+              background-color: #fdfdfd;
+              box-shadow: 0px 6px 4px -4px #08080803,
+                0px 2px 1.5px -4px #0808080a, 0px 4px 4px 0px #00000017;
+            }
+          }
+          .btn-primary {
+            max-width: 100%;
+          }
+        }
+        .actions {
+          button {
+            padding: 12px 8px;
           }
         }
       }
