Resolved Hover Issues For The Subscriptions And Photos Icons In The Header Sidebar.

--- a/public/styles/components/components.css
+++ b/public/styles/components/components.css
@@ -489,6 +489,20 @@
                        }
                      }
                    }
+
+                   &.subscriptions_icons {
+                    svg path {
+                      fill: black;
+                      stroke: #FFF;
+                      &:nth-child(1) {
+                        fill: #000;
+                      }
+
+                      &:nth-child(2) {
+                        fill: #000;
+                      }
+                    }
+                  }
  
                    &.blacklist-link {
                      svg path {
