Fixx To Profile Pages Card Video

--- a/public/styles/small-components/small-components.css
+++ b/public/styles/small-components/small-components.css
@@ -838,7 +838,7 @@
                 transition: var(--transition-fast);
                 will-change: transform;
 
-                img {
+                img, video {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
